fix(content-explorer): Fix color contrast issue for item details

--- a/src/elements/common/item/ItemDetails.scss
+++ b/src/elements/common/item/ItemDetails.scss
@@ -2,7 +2,7 @@
 
 .be-item-name {
     .be-item-details {
-        color: $bdl-gray-62;
+        color: $bdl-gray-65;
         font-size: 11px;
     }
 }
