--- a/src/elements/content-explorer/ItemList.scss
+++ b/src/elements/content-explorer/ItemList.scss
@@ -14,7 +14,7 @@
     border-left: 2px solid transparent;
     outline: none;
 
-    .bce-item-coloumn {
+    .bce-item-column {
         color: $bdl-gray-62;
     }
 
@@ -42,7 +42,7 @@
             opacity: 1;
         }
 
-        .bce-item-coloumn,
+        .bce-item-column,
         .be & .btn-plain {
             color: $dark-cerulean;
             outline: none;
@@ -61,7 +61,7 @@
             border-color: $grey-blue;
         }
 
-        .bce-item-coloumn,
+        .bce-item-column,
         .be & .btn-plain {
             color: $dark-cerulean;
         }
